________________________________________________________________________________

                      Win32::SharedFileOpen, Version 4.00
________________________________________________________________________________

Revision history for Perl extension Win32::SharedFileOpen.
_________________

v4.00 TODO

    - Added support for the 'R', 'S', 'T' and 'D' characters in the mode string
      argument to fsopen().  These were added to the Microsoft C library
      function _fsopen() in Visual Studio 2012 (VC11), but we can support them
      regardless of which compiler is being used (except for Borland C++) since
      we are emulating the function now.

    - The functionality to automatically retry opening a file if it could not be
      opened due to a sharing violation now works for perls built with the
      Borland C++ compiler as a result of now emulating the _fsopen() and
      _sopen() functions.  The known bug in various t\06_fsopen_access.t tests
      failing with Borland C++ is also resolved by the same change.

    - Rewrote most of the XS code to emulate, rather than directly expose, the
      Microsoft C library functions _fsopen() and _sopen().

      This has been done using the Win32 API function CreateFile() and Perl's
      own exported win32_open_osfhandle() function so that the file descriptors
      thus opened are in the same C RTL DLL as that loaded by perl and hence
      work when imported into PerlIO.  This change means that we can now support
      building this module with a different compiler to that which was used to
      build perl, something that previously failed because the Microsoft-
      specific _fsopen() and _sopen() functions (unlike standard stdio and lowio
      functions) are not redefined to call the versions in perl's C RTL DLL, and
      therefore opened file descriptors in a different C RTL DLL if this module
      was built by a compiler that used a different C RTL DLL.
