@@ -35,13 +35,14 @@ BEGIN {
 #===============================================================================
 
 MAIN: {
-    my $file = 'test.txt';
+    my($fh, $file, $ret, $errno, $lasterror);
 
     for my $i (1 .. 512) {
-        my $fh = new_fh();
-        my $ret = sopen($fh, $file, O_WRONLY | O_CREAT | O_TRUNC, SH_DENYNO,
-                        S_IWRITE);
-        my($errno, $lasterror) = ($!, $^E);
+        $fh = new_fh();
+        $file = "test$i.txt";
+        $ret = sopen($fh, $file, O_WRONLY | O_CREAT | O_TRUNC, SH_DENYNO,
+                     S_IWRITE);
+        ($errno, $lasterror) = ($!, $^E);
         ok($ret, "filehandle $i works")
             ? close $fh : diag("\$! = '$errno', \$^E = '$lasterror'");
         unlink $file;
